Update packages, including Babel v7

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-node-boilerplate",
   "version": "0.0.0",
-  "description": "",
+  "description": "Starting point for a single-page React app running on a Node.js server",
   "license": "ISC",
   "engines": {
     "node": "10"
@@ -16,38 +16,38 @@
     "lint": "eslint --ext .js,.jsx ."
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-hot-loader": "^1.3.9",
-    "css-loader": "^0.28.11",
+    "css-hot-loader": "^1.4.2",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "morgan": "^1.9.0",
-    "node-sass": "^4.9.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.3",
-    "sass-loader": "^7.0.3",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.15.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "mini-css-extract-plugin": "^0.4.2",
+    "morgan": "^1.9.1",
+    "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-hot-loader": "^4.3.8",
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.0.0",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-hot-middleware": "^2.24.0",
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
     "dotenv": "^6.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.10.0",
-    "nodemon": "^1.17.5"
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "nodemon": "^1.18.4"
   }
 }
