--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-node-boilerplate",
   "version": "0.0.0",
   "description": "Starting point for a single-page React app running on a Node.js server",
+  "repository": "https://github.com/saltire/react-node-boilerplate",
   "license": "ISC",
   "engines": {
     "node": "12"
@@ -12,43 +13,43 @@
     "watch": "nodemon -r dotenv/config server/index.js",
     "debug": "nodemon -r dotenv/config --inspect server/index.js",
     "build": "webpack -p --config webpack.prod.js",
-    "postinstall": "if test \"$NODE_ENV\" = \"production\"; then npm run build; fi",
     "lint": "eslint --ext .js,.jsx ."
   },
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-hot-loader": "^1.4.4",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.2.0",
     "express": "^4.17.1",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.11.1",
-    "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
+    "sass-loader": "^7.2.0",
+    "terser-webpack-plugin": "^1.4.1",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^16.8.6",
-    "dotenv": "^8.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "@hot-loader/react-dom": "^16.9.0",
+    "dotenv": "^8.1.0",
+    "eslint": "^6.2.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "nodemon": "^1.19.1"
   }
 }
