--- a/package.json
+++ b/package.json
@@ -5,50 +5,49 @@
   "repository": "https://github.com/saltire/react-node-boilerplate",
   "license": "ISC",
   "engines": {
-    "node": "12"
+    "node": "14"
   },
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
     "watch": "nodemon -r dotenv/config server/index.js",
     "build": "webpack -p --config webpack.prod.js",
-    "lint": "eslint --ext .js,.jsx ."
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-hot-loader": "^1.4.4",
-    "css-loader": "^4.2.2",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "express": "^4.17.1",
-    "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.4.1",
-    "mini-css-extract-plugin": "^0.11.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "morgan": "^1.10.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
-    "sass": "^1.26.10",
-    "sass-loader": "^10.0.2",
-    "terser-webpack-plugin": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-middleware": "^4.0.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^5.1.3"
+    "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^16.13.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.8.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "nodemon": "^2.0.4"
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "nodemon": "^2.0.6"
   }
 }
