Reconfigure for TypeScript

--- a/package.json
+++ b/package.json
@@ -1,53 +1,66 @@
 {
-  "name": "react-node-boilerplate",
+  "name": "react-node-typescript-boilerplate",
   "version": "0.0.0",
-  "description": "Starting point for a single-page React app running on a Node.js server",
-  "repository": "https://github.com/saltire/react-node-boilerplate",
+  "description": "Starting point for a single-page React app running on a Node.js server with Typescript",
+  "repository": "https://github.com/saltire/react-node-typescript-boilerplate",
   "license": "ISC",
   "engines": {
     "node": "14"
   },
   "main": "server/index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "watch": "nodemon -r dotenv/config server/index.js",
-    "build": "webpack -p --config webpack.prod.js",
+    "start": "node built/index.js",
+    "watch:server": "nodemon -x ts-node -- -r dotenv/config -P server/tsconfig.json server/index.ts",
+    "watch:client": "webpack serve --config webpack.dev.js",
+    "watch": "concurrently \"npm:watch:*\"",
+    "build:server": "tsc -p server",
+    "build:client": "webpack --config webpack.prod.js",
+    "build": "npm run build:server && npm run build:client",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.1.5",
     "express": "^4.17.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
-    "mini-css-extract-plugin": "^1.3.3",
     "morgan": "^1.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.1.0",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-middleware": "^4.0.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^5.7.3"
+    "react-hot-loader": "^4.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@hot-loader/react-dom": "^17.0.1",
+    "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.3.0",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "nodemon": "^2.0.6"
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.4",
+    "nodemon": "^2.0.7",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
