--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node built/index.js",
-    "watch:server": "nodemon -x ts-node -- -r dotenv/config -P server/tsconfig.json server/index.ts",
+    "watch:server": "nodemon -e ts -x ts-node -- -r dotenv/config -P server/tsconfig.json server/index.ts",
     "watch:client": "webpack serve --config webpack.dev.js",
     "watch": "concurrently \"npm:watch:*\"",
     "build:server": "tsc -p server",
@@ -19,7 +19,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
+    "express-promise-router": "^4.0.1",
     "morgan": "^1.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
