Replace react-hot-loader with react-refresh

--- a/babel.config.json
+++ b/babel.config.json
@@ -4,7 +4,12 @@
     ["@babel/preset-react", { "runtime": "automatic" }],
     ["@babel/preset-typescript"]
   ],
-  "plugins": [
-    "react-hot-loader/babel"
-  ]
+  "plugins": [],
+  "env": {
+    "development": {
+      "plugins": [
+        "react-refresh/babel"
+      ]
+    }
+  }
 }
