--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "morgan": "^1.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0"
+    "react-refresh": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
-    "@hot-loader/react-dom": "^17.0.1",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/react": "^17.0.0",
