Use webpack-dev-middleware to serve client on same host
- Update eslint configs
- Move webpack configs into server and convert to TS
- Remove concurrently and webpack-dev-server
- Remove api proxy

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,10 +3,10 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "lib": ["ES2020", "dom"],
-    "module": "commonjs",
-    "outDir": "../built",
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "outDir": "../built/client",
     "strict": true,
-    "target": "ES2015",
-    "types": []
+    "target": "ES2015"
   }
 }
