--- a/package.json
+++ b/package.json
@@ -7,60 +7,65 @@
   "engines": {
     "node": "14"
   },
-  "main": "server/index.js",
+  "main": "server/index.ts",
   "scripts": {
     "start": "node built/index.js",
-    "watch:server": "nodemon -e ts -x ts-node -- -r dotenv/config -P server/tsconfig.json server/index.ts",
-    "watch:client": "webpack serve --config webpack.dev.js",
-    "watch": "concurrently \"npm:watch:*\"",
+    "watch": "nodemon --watch server -e ts -x ts-node -- -r dotenv/config -P server/tsconfig.json server/index.ts",
     "build:server": "tsc -p server",
-    "build:client": "webpack --config webpack.prod.js",
+    "build:client": "webpack --config server/webpack/webpack.prod.ts",
     "build": "npm run build:server && npm run build:client",
+    "check:server": "npm run build:server -- --noEmit",
     "lint": "eslint ."
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
     "morgan": "^1.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-refresh": "^0.9.0"
+    "react-refresh": "^0.9.0",
+    "sass-loader": "^12.1.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.15.0",
+    "webpack-dev-middleware": "^5.0.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/css-minimizer-webpack-plugin": "^3.0.2",
     "@types/express": "^4.17.11",
+    "@types/mini-css-extract-plugin": "^2.2.0",
     "@types/morgan": "^1.9.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/terser-webpack-plugin": "^5.0.4",
+    "@types/webpack-dev-middleware": "^5.0.2",
+    "@types/webpack-hot-middleware": "^2.25.5",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "babel-loader": "^8.2.2",
-    "concurrently": "^5.3.0",
-    "css-loader": "^6.2.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
     "dotenv": "^10.0.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.2.0",
     "nodemon": "^2.0.7",
     "sass": "^1.32.4",
-    "sass-loader": "^12.1.0",
-    "terser-webpack-plugin": "^5.1.1",
     "ts-node": "^10.2.1",
-    "typescript": "^4.1.3",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "typescript": "^4.4.2",
+    "webpack-cli": "^4.3.1"
   }
 }
