--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "lib": ["ES2020"],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "../built",
+    "skipLibCheck": true,
+    "sourceMap": true,
     "strict": true,
-    "target": "ES2020",
-    "types": []
+    "target": "ES2020"
   }
 }
