--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/saltire/react-node-typescript-boilerplate",
   "license": "ISC",
   "engines": {
-    "node": "14"
+    "node": "16"
   },
   "main": "server/index.ts",
   "scripts": {
@@ -15,11 +15,16 @@
     "build:client": "webpack --config server/webpack/webpack.prod.ts",
     "build": "npm run build:server && npm run build:client",
     "check:server": "npm run build:server -- --noEmit",
-    "lint": "eslint ."
+    "check:client": "tsc -p client --noEmit",
+    "stylelint": "stylelint .",
+    "eslint": "eslint .",
+    "eslint:server": "eslint ./server",
+    "eslint:client": "eslint ./client",
+    "lint": "npm run eslint && npm run stylelint"
   },
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "axios": "^0.21.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
@@ -30,7 +35,7 @@
     "morgan": "^1.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "^0.10.0",
     "sass-loader": "^12.1.0",
     "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.15.0",
@@ -51,18 +56,22 @@
     "@types/react-dom": "^17.0.0",
     "@types/webpack-dev-middleware": "^5.0.2",
     "@types/webpack-hot-middleware": "^2.25.5",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "dotenv": "^10.0.0",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-airbnb-typescript": "^15.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.7",
     "sass": "^1.32.4",
+    "stylelint": "^14.1.0",
+    "stylelint-config-property-sort-order-smacss": "^8.0.0",
+    "stylelint-config-standard-scss": "^2.0.1",
+    "stylelint-scss": "^4.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
     "webpack-cli": "^4.3.1"
