Update packages, including Node 18 and React 18

--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "repository": "https://github.com/saltire/react-node-typescript-boilerplate",
   "license": "ISC",
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "server/index.ts",
   "scripts": {
     "start": "node built/index.js",
-    "watch": "nodemon --watch server -e ts -x ts-node -- -r dotenv/config -P server/tsconfig.json server/index.ts",
+    "watch": "nodemon --watch server -e ts -x \"ts-node -r dotenv/config -P server/tsconfig.json server/index.ts\"",
     "build:server": "tsc -p server",
     "build:client": "webpack --config server/webpack/webpack.prod.ts",
     "build": "npm run build:server && npm run build:client",
-    "check:server": "npm run build:server -- --noEmit",
+    "check:server": "tsc -p server --noEmit",
     "check:client": "tsc -p client --noEmit",
+    "check": "npm run check:server && npm run check:client",
     "stylelint": "stylelint .",
     "eslint": "eslint .",
     "eslint:server": "eslint ./server",
@@ -23,54 +24,54 @@
     "lint": "npm run eslint && npm run stylelint"
   },
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "axios": "^0.25.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "express": "^4.17.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
+    "axios": "^1.2.0",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.2",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.5.3",
+    "mini-css-extract-plugin": "^2.7.0",
     "morgan": "^1.10.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-refresh": "^0.11.0",
-    "sass-loader": "^12.4.0",
-    "terser-webpack-plugin": "^5.3.1",
-    "webpack": "^5.68.0",
-    "webpack-dev-middleware": "^5.3.1",
-    "webpack-hot-middleware": "^2.25.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-refresh": "^0.14.0",
+    "sass-loader": "^13.2.0",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.75.0",
+    "webpack-dev-middleware": "^6.0.0",
+    "webpack-hot-middleware": "^2.25.3",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/express": "^4.17.13",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/webpack-hot-middleware": "^2.25.5",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.8.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@types/webpack-hot-middleware": "^2.25.6",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.28.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "nodemon": "^2.0.15",
-    "sass": "^1.49.7",
-    "stylelint": "^14.3.0",
-    "stylelint-config-property-sort-order-smacss": "^8.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-scss": "^4.1.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5",
-    "webpack-cli": "^4.9.2"
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nodemon": "^2.0.20",
+    "sass": "^1.56.1",
+    "stylelint": "^14.15.0",
+    "stylelint-config-property-sort-order-smacss": "^9.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-scss": "^4.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3",
+    "webpack-cli": "^5.0.0"
   }
 }
