Change project name and update packages

--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "react-node-typescript-boilerplate",
-  "version": "0.0.0",
-  "description": "Starting point for a single-page React app running on a Node.js server with Typescript",
-  "repository": "https://github.com/saltire/react-node-typescript-boilerplate",
-  "license": "ISC",
+  "name": "round-robin",
+  "private": true,
   "engines": {
     "node": "18"
   },
@@ -24,54 +21,54 @@
     "lint": "npm run eslint && npm run stylelint"
   },
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
-    "axios": "^1.2.0",
-    "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.2",
-    "css-minimizer-webpack-plugin": "^4.2.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "axios": "^1.4.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.4",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.0",
+    "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
-    "sass-loader": "^13.2.0",
-    "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.75.0",
-    "webpack-dev-middleware": "^6.0.0",
+    "sass-loader": "^13.2.2",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.83.1",
+    "webpack-dev-middleware": "^6.1.1",
     "webpack-hot-middleware": "^2.25.3",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/express": "^4.17.14",
-    "@types/morgan": "^1.9.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@babel/preset-typescript": "^7.21.5",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@types/webpack-hot-middleware": "^2.25.6",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "dotenv": "^16.0.3",
-    "eslint": "^8.28.0",
+    "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "nodemon": "^2.0.20",
-    "sass": "^1.56.1",
-    "stylelint": "^14.15.0",
-    "stylelint-config-property-sort-order-smacss": "^9.0.0",
-    "stylelint-config-standard-scss": "^6.1.0",
-    "stylelint-scss": "^4.3.0",
+    "nodemon": "^2.0.22",
+    "sass": "^1.62.1",
+    "stylelint": "^15.6.2",
+    "stylelint-config-property-sort-order-smacss": "^9.1.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-scss": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "webpack-cli": "^5.0.0"
+    "typescript": "^5.0.4",
+    "webpack-cli": "^5.1.1"
   }
 }
