--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.6",
     "morgan": "^1.10.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
     "sass-loader": "^13.2.2",
     "terser-webpack-plugin": "^5.3.9",
+    "uuid": "^9.0.0",
     "webpack": "^5.83.1",
     "webpack-dev-middleware": "^6.1.1",
     "webpack-hot-middleware": "^2.25.3",
@@ -50,6 +52,7 @@
     "@types/morgan": "^1.9.4",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/uuid": "^9.0.1",
     "@types/webpack-hot-middleware": "^2.25.6",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
