Replace scss with tailwind, add some styles

--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "check:server": "tsc -p server --noEmit",
     "check:client": "tsc -p client --noEmit",
     "check": "npm run check:server && npm run check:client",
-    "stylelint": "stylelint .",
     "eslint": "eslint .",
     "eslint:server": "eslint ./server",
     "eslint:client": "eslint ./client",
-    "lint": "npm run eslint && npm run stylelint"
+    "lint": "npm run eslint"
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.4",
     "css-minimizer-webpack-plugin": "^5.0.0",
@@ -31,12 +31,14 @@
     "mini-css-extract-plugin": "^2.7.6",
     "morgan": "^1.10.0",
     "openai": "^3.2.1",
+    "postcss": "^8.4.26",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
-    "sass-loader": "^13.2.2",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "tailwindcss": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
     "uuid": "^9.0.0",
     "webpack": "^5.83.1",
@@ -66,11 +68,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.22",
-    "sass": "^1.62.1",
-    "stylelint": "^15.6.2",
-    "stylelint-config-property-sort-order-smacss": "^9.1.0",
-    "stylelint-config-standard-scss": "^9.0.0",
-    "stylelint-scss": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "webpack-cli": "^5.1.1"
